# StarMe

./: .project  Main.hs  README.md  index.html  starz.cabal
.dist-buildwrapper/: .Main.hs.bwinfo  .Main.hs.bwusage  .Setup.hs.bwinfo  starz.cabal
.dist-buildwrapper/src/: .Cassandra.hs.bwinfo  .Cassandra.hs.bwusage  .Github.hs.bwinfo  .Github.hs.bwusage  .Main.hs.bwinfo  .Main.hs.bwusage  .env.hs.bwinfo  Cassandra.hs  Main.hs
.dist-buildwrapper/src/Bar/: .Bar.hs.bwinfo  .Bar.hs.bwusage
.dist-buildwrapper/src/http/: .Github.hs.bwinfo  .Github.hs.bwusage  Github.hs
.dist-buildwrapper/src/http-req/: .Github.hs.bwinfo
src/: Auth.hs  Cassandra.hs  Main.hs  Models.hs
src/Http/: Github.hs
src/RabbitMQ/: Queue.hs
src/http-req/: Github.hs
static/: index.html
static/css/: index.css
static/js/: app.js  repo.js  repoData.js  repos.js
