name:                starz
version:             0.0.1
synopsis:            github starring app
homepage:            https://github.com/yourName/repoName
license:             MIT
author:              Aditya Bhargava
maintainer:          you@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable starz
  main-is:             Main.hs
  -- other-modules:       
  hs-source-dirs:      src
  build-depends:       base ==4.7.0.1
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , HTTP
                     , network
                     , scotty
                     , text
                     , aeson
                     , bytestring
                     , blaze-html
                     , persistent ==1.3.*
                     , persistent-template ==1.3.*
                     , persistent-sqlite ==1.3.*
                     , monad-logger ==0.3.10
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
  other-modules:       Http.Github