name:                starz
version:             0.0.1
synopsis:            github starring app
homepage:            https://github.com/yourName/repoName
license:             MIT
author:              Aditya Bhargava
maintainer:          you@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable starz
  main-is:             Main.hs
  -- other-modules:       
  hs-source-dirs:      src
  build-depends:       base ==4.7.0.1
                     , wai
                     , warp
                     , cassandra-cql ==0.4.0.1
                     , uuid ==1.3.5
                     , random ==1.0.1.1
                     , http-types
                     , resourcet
                     , HTTP
                     , http-conduit ==2.1.5
                     , network
                     , amqp ==0.10.1
                     , scotty
                     , scotty-tls
                     , text
                     , aeson
                     , bytestring
                     , blaze-html
                     , monad-logger ==0.3.10
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
  other-modules:       
                       Http.Github,
                       Cassandra,
                       Models,
                       RabbitMQ.Queue
